--- a/package.json
+++ b/package.json
@@ -2,17 +2,26 @@
     "type": "module",
     "name": "tienda-libros",
     "version": "1.0.0",
-    "description": "",
+    "description": "Proyecto coder",
     "main": "src/main.js",
     "scripts": {
       "start": "node .",
-      "dev": "nodemon -e js, html, css ."
+      "dev": "nodemon --env-file='.env' -e js,html,css ."
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
+      "cookie-parser": "^1.4.6",
+      "connect-mongo": "^5.1.0",
+      "passport": "^0.7.0",
+      "passport-jwt": "^4.0.1",
+      "passport-local": "^1.0.0",
+      "session": "^0.1.0",
       "express": "^4.18.2",
-      "mongoose": "^8.1.0"
+      "express-handlebars": "^7.1.2",
+      "mongoose": "^8.1.0",
+      "nodemailer": "^6.9.9",
+      "twilio": "^4.21.0"
     }
   }
